--- a/noticias.html
+++ b/noticias.html
@@ -106,6 +106,52 @@
         </div>
         <!-- /.row -->
 
+				<!-- Blog Post Row -->
+				<div class="row">
+
+						<div class="col-md-5">
+								<a href="ingenieros-de-valor-ambiental-realizan-una-prospeccion-de-negocios-en-peru.html">
+										<img class="img-responsive img-hover center-block" src="images/expoperu.jpg" alt="">
+								</a>
+						</div>
+						<div class="col-md-6">
+								<h3>
+										<a href="ingenieros-de-valor-ambiental-realizan-una-prospeccion-de-negocios-en-peru.html">Ingenieros de Valor ambiental realizan una prospección de negocios en Perú</a>
+								</h3>
+								<p>por Equipo Valor Ambiental</p>
+								<p><i>Sep 16, 2016</i></p>
+								<p>Francisca Núñez y Carlos Azócar, ingenieros del área de planificación y control de Valor Ambiental, desde el  14 al 17 de septiembre participaron en la Expomin Lima - Perú, la exposición más importante de minería que se realizar en el país vecino.</p>
+
+								<a class="btn btn-primary pull-right" href="ingenieros-de-valor-ambiental-realizan-una-prospeccion-de-negocios-en-peru.html">Ver Más <i class="fa fa-angle-right"></i></a>
+						</div>
+				</div>
+
+				<hr>
+				<!-- /.row -->
+
+				<!-- Blog Post Row -->
+				<div class="row">
+
+						<div class="col-md-5">
+								<a href="experto-realiza-taller-de-trabajo-colaborativo-para-fortalecer-el-clima-laboral.html">
+										<img class="img-responsive img-hover center-block" src="images/taller.jpg" alt="">
+								</a>
+						</div>
+						<div class="col-md-6">
+								<h3>
+										<a href="experto-realiza-taller-de-trabajo-colaborativo-para-fortalecer-el-clima-laboral.html">Experto realiza taller de trabajo colaborativo para fortalecer el clima laboral</a>
+								</h3>
+								<p>por Equipo Valor Ambiental</p>
+								<p><i>Sep 16, 2016</i></p>
+								<p>Con el firme propósito de mantener y mejorar el clima laboral de Valor Ambiental, el martes 13 de septiembre se efectuó una jornada de trabajo donde se puso especial énfasis en el fortalecimiento de las competencias necesarias para trabajar colaborativamente.</p>
+
+								<a class="btn btn-primary pull-right" href="experto-realiza-taller-de-trabajo-colaborativo-para-fortalecer-el-clima-laboral.html">Ver Más <i class="fa fa-angle-right"></i></a>
+						</div>
+				</div>
+
+				<hr>
+				<!-- /.row -->
+
         <!-- Blog Post Row -->
         <div class="row">
 
@@ -128,26 +174,7 @@
 
         <hr>
 
-				<!-- Blog Post Row -->
-        <div class="row">
 
-            <div class="col-md-5">
-                <a href="valor-ambiental-nuevamente-es-reconocida-por-su-compromiso-con-seguridad-y-salud.html">
-                    <img class="img-responsive img-hover center-block" src="images/mutual_033.jpg" alt="">
-                </a>
-            </div>
-            <div class="col-md-6">
-                <h3>
-                    <a href="valor-ambiental-nuevamente-es-reconocida-por-su-compromiso-con-seguridad-y-salud.html">Valor ambiental nuevamente es reconocida por su compromiso con la Seguridad y Salud Ocupacional</a>
-                </h3>
-                <p>por Sergio Mena</p>
-								<p><i>Dic 10, 2015</i></p>
-                <p>Se celebró con orgullo el reconocimiento recibido por La Mutual de Seguridad a nuestra empresa Valor Ambiental, este jueves 05 de Noviembre del 2015, por cumplir 5 años sin accidente con tiempo perdido, en el contrato de Servicios de Gestión Ambiental y Seguridad, en Compañía Mineta Teck Carmen Andacollo.</p>
-                <p>Los desafíos constantes en sembrar la cultura de seguridad siguen dando frutos, y seguiremos esforzándonos en prevalecer día a día nuestro futuro libre de accidentes y enfermedades profesionales.</p>
-                <a class="btn btn-primary pull-right" href="valor-ambiental-nuevamente-es-reconocida-por-su-compromiso-con-seguridad-y-salud.html">Ver Más <i class="fa fa-angle-right"></i></a>
-            </div>
-        </div>
-        <!-- /.row -->
 
         <!-- Blog Post Row -->
         <div class="row">
