cambio de Valor "A"ambiental

--- a/noticias.html
+++ b/noticias.html
@@ -116,7 +116,7 @@
 						</div>
 						<div class="col-md-6">
 								<h3>
-										<a href="ingenieros-de-valor-ambiental-realizan-una-prospeccion-de-negocios-en-peru.html">Ingenieros de Valor ambiental realizan una prospección de negocios en Perú</a>
+										<a href="ingenieros-de-valor-ambiental-realizan-una-prospeccion-de-negocios-en-peru.html">Ingenieros de Valor Ambiental realizan una prospección de negocios en Perú</a>
 								</h3>
 								<p>por Equipo Valor Ambiental</p>
 								<p><i>Sep 16, 2016</i></p>
@@ -186,7 +186,7 @@
             </div>
             <div class="col-md-6">
                 <h3>
-                    <a href="valor-ambiental-nuevamente-es-reconocida-por-su-compromiso-con-seguridad-y-salud.html">Valor ambiental nuevamente es reconocida por su compromiso con la Seguridad y Salud Ocupacional</a>
+                    <a href="valor-ambiental-nuevamente-es-reconocida-por-su-compromiso-con-seguridad-y-salud.html">Valor Ambiental nuevamente es reconocida por su compromiso con la Seguridad y Salud Ocupacional</a>
                 </h3>
                 <p>por Sergio Mena</p>
 								<p><i>Dic 10, 2015</i></p>
