--- a/ingenieros-de-valor-ambiental-realizan-una-prospeccion-de-negocios-en-peru.html
+++ b/ingenieros-de-valor-ambiental-realizan-una-prospeccion-de-negocios-en-peru.html
@@ -102,7 +102,7 @@
             <!-- Page Heading/Breadcrumbs -->
             <div class="row">
                 <div class="col-lg-12">
-                    <h1 class="page-header">Ingenieros de Valor ambiental realizan una prospección de negocios en Perú
+                    <h1 class="page-header">Ingenieros de Valor Ambiental realizan una prospección de negocios en Perú
 
                     </h1>
 
